aded linkedin profile

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: karanba
-  instagram:
+  instagram: https://www.linkedin.com/in/altaykarakus/
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
